Add uncertainty quantification via conformal prediction
Implements automatic 90% confidence intervals for distance predictions
using MAPIE (split conformal regression). Users can enable UQ with
use_uncertainty=True parameter in MINFLUXDistanceEstimator.

Key features:
- ml_uncertainty_quantification.py: Calibration script for both models
- ml_inference.py: Integrated UQ support with backward compatibility
- predict() returns (distance, lower, upper) when UQ enabled
- 90.1% empirical coverage, ~9.5nm mean interval width
- Minimal overhead (~0.01ms additional latency)

Documentation updated in README.md and README_ML.md with usage
examples, calibration instructions, and performance metrics.

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,19 @@ datasets/
 models/xgboost_ultimate.pkl
 models/random_forest_fast.pkl
 
+# Presentation files (not for GitHub)
+presentation_plots/
+*_presentation.pptx
+MINFLUX_ML_Presentation.pptx
+create_presentation.py
+create_presentation_plots.py
+create_scientific_plots.py
+rmse_comparison.png
+speed_comparison.png
+validation_by_distance.png
+uncertainty_*.png
+uq_*.log
+
 # IDE and misc
 .scat
 *.code-workspace
