Clean up project structure
- Remove .DS_Store files from tracking
- Add original_paper/ to gitignore
- Add ml_vs_mle_comparison.png analysis plot

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,10 @@
+# macOS
+.DS_Store
+**/.DS_Store
+
+# Original paper data (local only)
+original_paper/
+
 # Data directories (too large for GitHub)
 data/
 datasets/
